[package]
name = "code-executor"
version = "0.1.0"
authors = ["Rohit Kumar <letmutx@gmail.com>"]

[dependencies]
futures = "0.1.13"
futures-cpupool = "0.1.6"
hyper = "0.11.14"
hyperlocal = "0.4.1"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
serde_url_params = "0.1.0"
tokio-core = "0.1"
tar = "0.4.13"
url = "1.5.1"
tokio-io = "0.1.3"
bytes = "0.4.5"
log = "0.4.1"
env_logger = "0.5.1"
unicase = "2.1.0"